[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/NavButton.tscn" id="2"]
[ext_resource type="FontFile" path="res://assets/fonts/gemunu-libre-v8-latin-700.ttf" id="3"]
[ext_resource type="Texture2D" path="res://assets/backgrounds/hills_ruins_background.png" id="4"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 6

[node name="Layout" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -170.0
offset_right = 170.0
offset_bottom = 170.0

[node name="Buttons" type="VBoxContainer" parent="Layout"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Layout/Buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.737255, 0.737255, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 44
text = "PUFFLE"
horizontal_alignment = 1

[node name="PlayButton" parent="Layout/Buttons" instance=ExtResource("2")]
custom_minimum_size = Vector2(190, 40)
layout_mode = 2
text = "PLAY"

[node name="ShopButton" parent="Layout/Buttons" instance=ExtResource("2")]
custom_minimum_size = Vector2(190, 40)
layout_mode = 2
text = "SHOP"

[node name="AmuletsButton" parent="Layout/Buttons" instance=ExtResource("2")]
custom_minimum_size = Vector2(190, 40)
layout_mode = 2
text = "CHARACTER"

[node name="HowToPlayButton" parent="Layout/Buttons" instance=ExtResource("2")]
custom_minimum_size = Vector2(190, 40)
layout_mode = 2
text = "HOW TO PLAY"

[node name="SettingsButton" parent="Layout/Buttons" instance=ExtResource("2")]
custom_minimum_size = Vector2(190, 40)
layout_mode = 2
text = "SETTINGS"

[node name="WipeSaveButton" parent="Layout/Buttons" instance=ExtResource("2")]
custom_minimum_size = Vector2(190, 40)
layout_mode = 2
text = "WIPE SAVE"
